add generic service for Publisher